[project]
name = "comfyui-upscale-cudaspeed"
version = "1.0.0"
description = "A high-performance image upscaling plugin for ComfyUI with CUDA acceleration, multi-GPU support, mixed precision, and Tensor Core optimization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["comfyui", "upscale", "cuda", "gpu", "ai", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "spandrel>=0.3.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-Upscale-CUDAspeed"
"Bug Reports" = "https://github.com/yourusername/ComfyUI-Upscale-CUDAspeed/issues"
"Source Code" = "https://github.com/yourusername/ComfyUI-Upscale-CUDAspeed"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"